--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <form>
                  <br>
                  <br>
-                 <img src="./img/cheese.svg" width="50" height="50" alt="cheese">
+                <img src="./img/cheese.svg" width="50" height="50" alt="cheese">
                 <span>Cheese</span>  
                 <input class="checkItems" type="checkbox" name="Cheese" id="Cheese" value="40"><span class="text-color">Add</span></input>
                 <label for="Cheese"></label>
@@ -41,7 +41,7 @@
                <br>
                <br>
                <form>
-                  <img src="./img/fried-egg.svg" width="50" height="50" alt="egg">
+                 <img src="./img/fried-egg.svg" width="50" height="50" alt="egg">
                  <span>Egg</span>  
                  <input class="checkItems" type="checkbox" name="Egg" id="Egg" value="60"> <span class="text-color">    Add  </span> </input>
                  <label for="egg"></label>
@@ -49,7 +49,7 @@
                <br>
                 <br>
                 <form>
-                    <img src="./img/mustard.svg" width="50" height="50" alt="Mustard"> 
+                  <img src="./img/mustard.svg" width="50" height="50" alt="Mustard"> 
                   <span>Mustard</span>
                   <input class="checkItems"type="checkbox" name="Mustard" id="Mustard" value="10">  <span class="text-color"> Add</span></input>
                   <label for="Mustard"></label>
@@ -88,8 +88,8 @@
                  <br>
                  <br>
                  <form action="">
-                   <label for="coupon">Discount</label>
-                   <input type="text" name="coupon" id="coupon">
+                   <label for="coupon">Discount Coupon</label>
+                   <input type="text" name="coupon" id="coupon" width="600px">
                  </form>
              </div>
              <br>
@@ -102,7 +102,7 @@
     <footer>
          <div class="ft-sfondo">
             <div id="yourPrice"></div>
-            <div id="prezzofinale"><h1>YOUR PRICE IS:</h1></div>
+            <div id="prezzofinale"><h1 class="prezzofin">YOUR PRICE IS:</h1></div>
             <script type="text/javascript" src="JS/script.js"></script>
          </div>
    </footer> 
